# JAMMSPRITE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  asciisprite.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
jammsprite/: __init__.py  __main__.py  cli.py  core.py
tests/: test_core.py
tools/: player.html
